2007-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-narrow-to-headers-or-head): Ignore
	mail-header-separator in the body.

2007-05-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-mode): Fix comment about displaying
	non-break space.

2007-05-09  Didier Verna  <didier@xemacs.org>

	* gnus-diary.el, nndiary.el: Remove the description comment (nndiary is
	now properly documented in the Gnus manual).  Fix the spelling of "Back
	End".

2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-strip-charset-parameters): New function.
	(gnus-mime-view-part-as-charset): Use it; redisplay subpart currently
	displayed of multipart/alternative part if it is invoked from summary
	buffer.
	(gnus-article-part-wrapper): Select article window.

	* mm-view.el (mm-inline-text-html-render-with-w3m)
	(mm-inline-text-html-render-with-w3m-standalone)
	(mm-inline-render-with-function): Use mail-parse-charset by default.

2007-04-18  Levin Du  <zslevin@gmail.com>  (tiny change)

	* calendar/parse-time.el (parse-time-string-chars): Check if CHAR
	is less than the length of parse-time-syntax.

2007-04-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-inews-yank-articles): Use
	message-exchange-point-and-mark instead of exchange-point-and-mark.

2007-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-yank-original): Make sure cited text ends with
	newline; don't exchange point and mark.

2007-04-07  Chong Yidong  <cyd@stupidchicken.com>

	* tls.el (open-tls-stream): Properly handle case where there
	is no associated buffer.

2007-04-03  Thien-Thi Nguyen  <ttn@gnu.org>

	* gnus-msg.el (gnus-inews-yank-articles): Fix bug: After
	message-yank-original, make sure (< mark TEXT point).

2007-03-31  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmail.el (nnmail-spool-file): Mark as obsolete.
	(nnmail-get-new-mail): Reformat.

	* gnus-registry.el (gnus-registry-cache-save): Add FIXME comment.
